更新游戏页面，优化Flappy Bird、Minesweeper、Pacman、Tetris和Traffic Jam 3D页面的结构，添加滚动条美化样式，修复全屏功能，提升用户体验和页面一致性，同时删除2048游戏页面以简化项目结构。

--- a/game-minesweeper.html
+++ b/game-minesweeper.html
@@ -10,6 +10,45 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="footer.js"></script>
     <style>
+        /* 隐藏和美化滚动条 */
+        ::-webkit-scrollbar {
+            width: 8px;
+            height: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: rgba(0, 0, 0, 0.3);
+        }
+        html {
+            scrollbar-width: thin;
+            scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+        }
+        body {
+            min-height: 100vh;
+            overflow-x: hidden;
+        }
+        .game-info-card {
+            max-height: none;
+            overflow: visible;
+        }
+        iframe {
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            width: 100%;
+            height: 600px;
+            border: none;
+            display: block;
+            background: transparent;
+        }
+        iframe::-webkit-scrollbar {
+            display: none;
+        }
         .game-canvas-container {
             position: relative;
             width: 100%;
@@ -122,7 +161,7 @@
 </head>
 <body class="bg-gray-50">
     <!-- Header Navigation -->
-    <header class="bg-white shadow-sm">
+    <header class="bg-white shadow-sm sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
@@ -160,8 +199,8 @@
                         <span>8.7</span>
                     </div>
                     <div class="flex items-center">
-                        <i class="fas fa-gamepad mr-1"></i>
-                        <span>Thinking</span>
+                        <i class="fas fa-brain mr-1" id="categoryIcon"></i>
+                        <span id="categoryText">Thinking</span>
                     </div>
                     <div class="flex items-center">
                         <i class="fas fa-play mr-1"></i>
@@ -185,13 +224,9 @@
             </div>
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
-            <!-- Game Area -->
+            <!-- Game Area 直接平铺 -->
             <div class="lg:col-span-3">
-                <div class="game-canvas-container" id="game-canvas-container">
-                    <div class="game-canvas" style="overflow:hidden; position:relative;">
-                        <iframe id="minesweeper-iframe" src="https://html-classic.itch.zone/html/2820951/index.html" title="Minesweeper Game" style="width:900px;height:600px;border:none;display:block;background:transparent;"></iframe>
-                    </div>
-                </div>
+                <iframe src="https://html-classic.itch.zone/html/2820951/index.html" width="100%" height="600" style="border:none;"></iframe>
             </div>
             <!-- Sidebar -->
             <div class="lg:col-span-1">
@@ -215,7 +250,7 @@
                         <ul class="text-sm text-gray-600 space-y-1">
                             <li>• Left click to reveal</li>
                             <li>• Right click to flag</li>
-            </ul>
+                        </ul>
                     </div>
                 </div>
                 <!-- Related Games -->
@@ -223,7 +258,7 @@
                     <h3 class="text-lg font-semibold mb-3">Related Games</h3>
                     <div class="space-y-2">
                         <div class="related-game" onclick="goToGame('game-flappybird.html')">
-                            <img src="img/minesweeper.jpg" alt="Flappy Bird">
+                            <img src="img/flappybird.png" alt="Flappy Bird">
                             <div><div class="font-medium">Flappy Bird</div><div class="text-sm text-gray-500">Arcade & Classic</div></div>
                         </div>
                         <div class="related-game" onclick="goToGame('game-pacman.html')">
@@ -234,43 +269,44 @@
                             <img src="img/tetris.jpg" alt="Tetris">
                             <div><div class="font-medium">Tetris</div><div class="text-sm text-gray-500">Arcade & Classic</div></div>
                         </div>
-                        <div class="related-game" onclick="goToGame('game-snake.html')">
-                            <img src="img/2048.png" alt="Snake">
-                            <div><div class="font-medium">Snake</div><div class="text-sm text-gray-500">Arcade & Classic</div></div>
-                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </main>
-    <!-- Footer Container -->
     <div id="footer-container"></div>
     <script>
+        // 分类图标映射
+        const categoryIcons = {
+            'Driving': 'fas fa-car',
+            'Shooting': 'fas fa-crosshairs',
+            'For Girls': 'fas fa-heart',
+            'Fighting': 'fas fa-fist-raised',
+            'Thinking': 'fas fa-brain',
+            'Management & Sim': 'fas fa-city',
+            'Skill': 'fas fa-bullseye',
+            'Action & Adventure': 'fas fa-running',
+            'Strategy & RPG': 'fas fa-chess',
+            'Sports': 'fas fa-futbol',
+            'Fun & Crazy': 'fas fa-laugh',
+            'Arcade & Classic': 'fas fa-gamepad'
+        };
+        function setCategory(category) {
+            const iconElement = document.getElementById('categoryIcon');
+            const textElement = document.getElementById('categoryText');
+            if (categoryIcons[category]) {
+                iconElement.className = categoryIcons[category] + ' mr-1';
+                textElement.textContent = category;
+            }
+        }
+        setCategory('Thinking');
         function goToGame(game) { window.location.href = game; }
         function toggleFullscreen() {
-            const container = document.querySelector('.game-canvas-container');
-            if (document.fullscreenElement) { document.exitFullscreen(); } else { container.requestFullscreen(); }
+            const iframe = document.querySelector('iframe');
+            if (document.fullscreenElement) { document.exitFullscreen(); } else { iframe.requestFullscreen(); }
         }
         function shareGame() { if (navigator.share) { navigator.share({ title: 'Minesweeper - GameShiftly', text: 'Check out this awesome game!', url: window.location.href }); } else { navigator.clipboard.writeText(window.location.href); alert('Game link copied to clipboard!'); } }
         function toggleFavorite() { const icon = document.getElementById('favoriteIcon'); const text = document.getElementById('favoriteText'); if (icon.classList.contains('text-red-500')) { icon.classList.remove('text-red-500'); text.textContent = 'Favorite'; } else { icon.classList.add('text-red-500'); text.textContent = 'Favorited'; } }
-        function restartGame() { document.querySelector('.game-canvas iframe').contentWindow.location.reload(); }
-    </script>
-    <script>
-        (function(){
-            function scaleMinesweeperIframe() {
-                var container = document.getElementById('game-canvas-container');
-                var iframe = document.getElementById('minesweeper-iframe');
-                var baseWidth = 900, baseHeight = 600;
-                var maxW = container.offsetWidth;
-                var maxH = window.innerHeight * 0.7;
-                var scale = Math.min(maxW / baseWidth, maxH / baseHeight, 1);
-                iframe.style.transform = 'scale(' + scale + ')';
-                iframe.style.transformOrigin = 'top left';
-                container.style.height = (baseHeight * scale) + 'px';
-            }
-            window.addEventListener('resize', scaleMinesweeperIframe);
-            document.addEventListener('DOMContentLoaded', scaleMinesweeperIframe);
-        })();
     </script>
 </body>
 </html> 
