--- a/gameshiftly.html
+++ b/gameshiftly.html
@@ -59,19 +59,25 @@
             transform: scale(1.05);
         }
         
-        /* 游戏卡片信息覆盖层 - 始终显示 */
+        /* 游戏卡片信息覆盖层 - 默认隐藏，悬停时显示 */
         .game-card-info {
             position: absolute;
             bottom: 0;
             left: 0;
             right: 0;
-            background: linear-gradient(transparent, rgba(0, 0, 0, 0.7));
+            background: linear-gradient(transparent, rgba(0, 0, 0, 0.8));
             color: white;
             padding: 12px 8px 8px 8px;
             transition: all 0.3s ease;
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(100%);
         }
         
         .game-card:hover .game-card-info {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
             background: linear-gradient(transparent, rgba(0, 0, 0, 0.9));
             padding: 16px 8px 12px 8px;
         }
