--- a/gameshiftly.html
+++ b/gameshiftly.html
@@ -1352,7 +1352,7 @@
                                 <div class="quick-links-section">
                     <h4 class="text-base lg:text-lg font-semibold mb-4">Quick Links</h4>
                     <ul class="space-y-2">
-                        <li><a href="gameshiftly.html" class="text-gray-400 hover:text-white transition text-sm lg:text-base">Home</a></li>
+                        <li><a href="/" class="text-gray-400 hover:text-white transition text-sm lg:text-base">Home</a></li>
                         <li><a href="gameshiftly-category.html" class="text-gray-400 hover:text-white transition text-sm lg:text-base">Popular Games</a></li>
                         <li><a href="gameshiftly-category.html" class="text-gray-400 hover:text-white transition text-sm lg:text-base">New Games</a></li>
                         <li><a href="gameshiftly-category.html" class="text-gray-400 hover:text-white transition text-sm lg:text-base">Categories</a></li>
