删除 `_redirects` 文件，并将所有游戏页面中的链接从 `gameshiftly.html` 更新为根路径 `/`，确保用户访问时不会出现多余的路径显示。

--- a/game-flappybird.html
+++ b/game-flappybird.html
@@ -181,7 +181,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="gameshiftly.html" class="flex items-center space-x-2">
+                    <a href="/" class="flex items-center space-x-2">
                         <div class="w-8 h-8 bg-red-600 rounded flex items-center justify-center">
                             <span class="text-white font-bold text-sm">GS</span>
                         </div>
