--- a/game-minesweeper.html
+++ b/game-minesweeper.html
@@ -165,7 +165,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="/" class="flex items-center space-x-2">
+                    <a href="index.html" class="flex items-center space-x-2">
                         <div class="w-8 h-8 bg-red-600 rounded flex items-center justify-center">
                             <span class="text-white font-bold text-sm">GS</span>
                         </div>
