更新游戏页面链接，确保主页中的游戏卡片直接指向相应的HTML文件，移除不再需要的重定向规则，以解决跳转问题并提高用户体验。

--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
                         <div class="flex-1 overflow-hidden">
                             <div id="thinking-games" class="flex space-x-4 lg:space-x-5 scroll-container" style="scroll-behavior: smooth;">
                                 <!-- 游戏卡片 -->
-                                                                                                <div class="game-card cursor-pointer minesweeper-card" onclick="window.open('minesweeper', '_blank')">
+                                                                                                <div class="game-card cursor-pointer minesweeper-card" onclick="window.open('minesweeper.html', '_blank')">
                                     <img src="img/minesweeper.jpg" alt="Minesweeper">
                                     <div class="game-card-info">
                                         <h3>Minesweeper</h3>
@@ -1251,7 +1251,7 @@
                         <div class="flex-1 overflow-hidden">
                             <div id="arcade-games" class="flex space-x-4 lg:space-x-5 scroll-container" style="scroll-behavior: smooth;">
                                 <!-- 游戏卡片 -->
-                                                                                                <div class="game-card cursor-pointer pacman-card" onclick="window.open('pacman', '_blank')">
+                                                                                                <div class="game-card cursor-pointer pacman-card" onclick="window.open('pacman.html', '_blank')">
                                     <img src="img/Pacman.jpg" alt="Pacman">
                                     <div class="game-card-info">
                                         <h3>Pacman</h3>
@@ -1266,7 +1266,7 @@
                                     <div class="game-card-preview"></div>
                                 </div>
                                 
-                                <div class="game-card cursor-pointer tetris-card" onclick="window.open('tetris', '_blank')">
+                                <div class="game-card cursor-pointer tetris-card" onclick="window.open('tetris.html', '_blank')">
                                     <img src="img/tetris.jpg" alt="Tetris">
                                     <div class="game-card-info">
                                         <h3>Tetris</h3>
@@ -1281,7 +1281,7 @@
                                     <div class="game-card-preview"></div>
                                 </div>
                                 
-                                <div class="game-card cursor-pointer flappybird-card" onclick="window.open('flappybird', '_blank')">
+                                <div class="game-card cursor-pointer flappybird-card" onclick="window.open('flappybird.html', '_blank')">
                                     <img src="img/flappybird.png" alt="Flappy Bird">
                                     <div class="game-card-info">
                                         <h3>Flappy Bird</h3>
