修复游戏页面的URL重定向，处理末尾斜杠问题，确保用户访问时不会出现404错误。同时更新Pacman游戏的iframe链接，替换为更稳定的HTML5游戏，提升用户体验。所有游戏页面中的相关游戏链接也已更新为简化格式，确保一致性。

--- a/pacman.html
+++ b/pacman.html
@@ -241,7 +241,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
             <!-- Game Area 直接平铺 -->
             <div class="lg:col-span-3">
-                <iframe id="pacmanGame" src="https://html-classic.itch.zone/html/3946506/index.html" width="552" height="600" frameborder="0" allowfullscreen title="Pacman Game" onload="handleIframeLoad()" onerror="handleIframeError()"></iframe>
+                <iframe id="pacmanGame" src="https://www.google.com/logos/2010/pacman10-i.html" width="552" height="600" frameborder="0" allowfullscreen title="Pacman Game" onload="handleIframeLoad()" onerror="handleIframeError()"></iframe>
                 <div id="gameError" class="hidden bg-gray-100 rounded-lg p-8 text-center">
                     <div class="text-gray-600 mb-4">
                         <i class="fas fa-exclamation-triangle text-4xl mb-4"></i>
