--- a/flappybird.html
+++ b/flappybird.html
@@ -280,15 +280,15 @@
                 <div class="game-info-card">
                     <h3 class="text-lg font-semibold mb-3">Related Games</h3>
                     <div class="space-y-2">
-                        <div class="related-game" onclick="goToGame('game-minesweeper.html')">
+                        <div class="related-game" onclick="goToGame('minesweeper.html')">
                             <img src="img/minesweeper.jpg" alt="Minesweeper">
                             <div><div class="font-medium">Minesweeper</div><div class="text-sm text-gray-500">Thinking</div></div>
                         </div>
-                        <div class="related-game" onclick="goToGame('game-pacman.html')">
+                        <div class="related-game" onclick="goToGame('pacman.html')">
                             <img src="img/Pacman.jpg" alt="Pacman">
                             <div><div class="font-medium">Pacman</div><div class="text-sm text-gray-500">Arcade & Classic</div></div>
                         </div>
-                        <div class="related-game" onclick="goToGame('game-tetris.html')">
+                        <div class="related-game" onclick="goToGame('tetris.html')">
                             <img src="img/tetris.jpg" alt="Tetris">
                             <div><div class="font-medium">Tetris</div><div class="text-sm text-gray-500">Arcade & Classic</div></div>
                         </div>
