--- a/index.html
+++ b/index.html
@@ -1400,10 +1400,10 @@
         
         // 游戏数据库 - 只包含网站实际存在的游戏
         const gamesDatabase = [
-            { name: 'Tetris', category: 'Arcade & Classic', url: 'game-tetris.html', tags: ['puzzle', 'blocks', 'retro', 'classic', 'tetris'] },
-            { name: 'Pacman', category: 'Arcade & Classic', url: 'game-pacman.html', tags: ['maze', 'arcade', 'retro', 'ghosts', 'pacman'] },
-            { name: 'Flappy Bird', category: 'Arcade & Classic', url: 'game-flappybird.html', tags: ['bird', 'skill', 'endless', 'pixel', 'flappy'] },
-            { name: 'Minesweeper', category: 'Thinking', url: 'game-minesweeper.html', tags: ['logic', 'puzzle', 'mines', 'strategy', 'minesweeper'] }
+            { name: 'Tetris', category: 'Arcade & Classic', url: 'tetris.html', tags: ['puzzle', 'blocks', 'retro', 'classic', 'tetris'] },
+            { name: 'Pacman', category: 'Arcade & Classic', url: 'pacman.html', tags: ['maze', 'arcade', 'retro', 'ghosts', 'pacman'] },
+            { name: 'Flappy Bird', category: 'Arcade & Classic', url: 'flappybird.html', tags: ['bird', 'skill', 'endless', 'pixel', 'flappy'] },
+            { name: 'Minesweeper', category: 'Thinking', url: 'minesweeper.html', tags: ['logic', 'puzzle', 'mines', 'strategy', 'minesweeper'] }
         ];
 
         // 搜索功能
