修复Flappy Bird和Tetris游戏页面的iframe路径问题，确保在不同环境下正确加载游戏文件。此更新将iframe的src属性修改为相对路径，提升了游戏页面的稳定性和用户体验。

--- a/flappybird.html
+++ b/flappybird.html
@@ -249,7 +249,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
             <!-- Game Area 直接平铺 -->
             <div class="lg:col-span-3">
-                <iframe id="flappybirdGame" src="flappybird/index.html" width="100%" height="600" style="border:none;" onload="handleFlappybirdLoad()" onerror="handleFlappybirdError()"></iframe>
+                <iframe id="flappybirdGame" src="./flappybird/index.html" width="100%" height="600" style="border:none;" onload="handleFlappybirdLoad()" onerror="handleFlappybirdError()"></iframe>
                 <div id="flappybirdError" class="hidden bg-gray-100 rounded-lg p-8 text-center">
                     <div class="text-gray-600 mb-4">
                         <i class="fas fa-exclamation-triangle text-4xl mb-4"></i>
