--- a/tetris.html
+++ b/tetris.html
@@ -241,7 +241,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
             <!-- Game Area 直接平铺 -->
             <div class="lg:col-span-3">
-                <iframe id="tetrisGame" src="./tetris/index.html" width="100%" height="600" style="border:none;" onload="handleTetrisLoad()" onerror="handleTetrisError()"></iframe>
+                <iframe id="tetrisGame" src="/tetris/index.html" width="100%" height="600" style="border:none;" onload="handleTetrisLoad()" onerror="handleTetrisError()"></iframe>
                 <div id="tetrisError" class="hidden bg-gray-100 rounded-lg p-8 text-center">
                     <div class="text-gray-600 mb-4">
                         <i class="fas fa-exclamation-triangle text-4xl mb-4"></i>
