修复Flappy Bird和Tetris游戏页面的iframe路径问题，将src属性修改为绝对路径，以确保在不同环境下正确加载游戏文件。同时更新相关游戏链接，确保指向正确的.html文件。此更新提升了游戏页面的稳定性和用户体验，确保用户能够顺利访问游戏内容。

--- a/minesweeper.html
+++ b/minesweeper.html
@@ -531,9 +531,9 @@
         
         // 游戏数据库 - 只包含网站实际存在的游戏
         const gamesDatabase = [
-            { name: 'Tetris', category: 'Arcade & Classic', url: 'tetris.html', tags: ['puzzle', 'blocks', 'retro', 'classic', 'tetris'] },
+            { name: 'Tetris', category: 'Arcade & Classic', url: 'tetris/', tags: ['puzzle', 'blocks', 'retro', 'classic', 'tetris'] },
             { name: 'Pacman', category: 'Arcade & Classic', url: 'pacman.html', tags: ['maze', 'arcade', 'retro', 'ghosts', 'pacman'] },
-            { name: 'Flappy Bird', category: 'Arcade & Classic', url: 'flappybird.html', tags: ['bird', 'skill', 'endless', 'pixel', 'flappy'] },
+            { name: 'Flappy Bird', category: 'Arcade & Classic', url: 'flappybird/', tags: ['bird', 'skill', 'endless', 'pixel', 'flappy'] },
             { name: 'Minesweeper', category: 'Thinking', url: 'minesweeper.html', tags: ['logic', 'puzzle', 'mines', 'strategy', 'minesweeper'] }
         ];
 
