--- a/minesweeper.html
+++ b/minesweeper.html
@@ -6,6 +6,10 @@
     <title>Minesweeper - GameShiftly</title>
     <meta name="description" content="Play Minesweeper online for free! Uncover all the safe squares without detonating any mines. Test your logic and luck!">
     <link rel="canonical" href="https://gameshiftly.online/minesweeper.html">
+    
+    <!-- 全局Google Analytics自动加载器 -->
+    <script src="global-analytics.js"></script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="header.js"></script>
